CHATS_SIT/force-app/main/default/objects/T_APPLN_SELF_EMPLMT__c.object
<CustomObject>
    <description>PEAK application Self-Employment information</description>
   <!-- <enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>ADR_CITY__c</fullName>
        <description>ADR_CITY</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_CITY</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_1__c</fullName>
        <description>ADR_LINE_1</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_LINE_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_2__c</fullName>
        <description>ADR_LINE_2</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_LINE_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_STATE__c</fullName>
        <description>ADR_STATE</description>
        <label>ADR_STATE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_ZIP_EXTN__c</fullName>
        <description>ADR_ZIP_EXTN</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_ZIP_EXTN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_ZIP_MAIN__c</fullName>
        <description>ADR_ZIP_MAIN</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_ZIP_MAIN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMT_EXP_MONTH__c</fullName>
        <description>AMT_EXP_MONTH</description>
        <label>AMT_EXP_MONTH</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMT_INCOME_GROSS_PAY_STUB__c</fullName>
        <label>AMT_INCOME_GROSS_PAY_STUB</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMT_INCOME_MONTH_ESTMD__c</fullName>
        <description>AMT_INCOME_MONTH_ESTMD</description>
        <label>AMT_INCOME_MONTH_ESTMD</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDE_FREQ_INCOME__c</fullName>
        <label>CDE_FREQ_INCOME</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_INCOME_TYPE__c</fullName>
        <label>Income Type Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_SOURCE_VRFYD_PAY__c</fullName>
        <label>CDE_SOURCE_VRFYD_PAY</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_TYPE_VERIF__c</fullName>
        <label>CDE_TYPE_VERIF</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNT_WEEK_PER_HOURS_ESTMD__c</fullName>
        <description>CNT_WEEK_PER_HOURS_ESTMD</description>
        <label>CNT_WEEK_PER_HOURS_ESTMD</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV_INCOME__c</fullName>
        <label>DTE_BEGIN_EFFV_INCOME</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>DTE_BEGIN_EFFV</description>
        <label>DTE_BEGIN_EFFV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EMP__c</fullName>
        <description>DTE_BEGIN_EMP</description>
        <label>Employment Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV_INCOME__c</fullName>
        <label>DTE_END_EFFV_INCOME</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EMP__c</fullName>
        <label>Employment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_PAY__c</fullName>
        <label>DTE_PAY</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_APPLN_INDIV</label>
        <referenceTo>T_APPLN_INDIV__c</referenceTo>
        <relationshipLabel>Application Self Employments</relationshipLabel>
        <relationshipName>Application_Self_Employments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_APPLN_SELF_EMPLMT__c</fullName>
        <label>IDN_APPLN_SELF_EMPLMT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INCOME_FREQUENCY__c</fullName>
        <label>Income Frequency</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_LLC_SCORP__c</fullName>
        <description>IND_LLC_SCORP</description>
        <label>IND_LLC_SCORP</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_BUSNS__c</fullName>
        <description>NAM_BUSNS</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_EXTN__c</fullName>
        <description>NBR_PHONE_EXTN</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NBR_PHONE_EXTN</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE__c</fullName>
        <description>NBR_PHONE</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NBR_PHONE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCHECK_TYPE__c</fullName>
        <label>Paycheck Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROPRIETORSHIP__c</fullName>
        <label>Proprietorship</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_WEEKLY_HOURS_WORKED__c</fullName>
        <label>Total Weekly Hours Worked</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Application Self Employment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASELF_EMPLMT-{0}</displayFormat>
        <label>Application Self Employments ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Self Employments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>